# llm-interpretability

./: README.md  Runtime collision analysis clean.ipynb  Runtime collision analysis gpt5 prompts.ipynb  Runtime collision analysis.ipynb  Runtime_collision_analysis.ipynb  analysis.py  gpt-2_layer0_prompts.csv  main.py  model.py  preds.py  prism_data.py  pyproject.toml  run_both_scripts.py
manager/: pyproject.toml
outputs/: low_poly.npy  top_poly.npy
runtime_collision_prompt/gpt2-small/: runtime_collision_prompts_layer0.csv  runtime_collision_prompts_layer0.pkl
src/: download_data.py
