[project]
name = "llm-interpretability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair",
    "dotenv",
    "huggingface-hub[hf-xet]>=0.35.3",
    "ipykernel>=6.30.1",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "torch>=2.8.0",
    "transformer-lens>=2.16.1",
    "transformers>=4.57.0",
    "v>=1",
    "sae-lens",

]

[tool.uv.sources]
sae-lens = { git = "https://github.com/jbloomAus/SAELens.git" }
